# calculator-npi

./: .env.dev  .env.test  .gitignore  ContainerFile  README.md  container-compose.yml  docker-compose.yml
.devcontainer/: ContainerFile  devcontainer.json
api/: ContainerFile  README.md  entrypoint.py  pyproject.toml
api/rpn_calculator/: __init__.py  calculator.py  database.py  main.py  models.py
api/src/: calculator.py  database.py  main.py
api/tests/: __init__.py  test_calculator.py
api/tests/integration/: conftest.py  test_calculate.py  test_clear.py  test_export.py
api/tests/unit/: test_calculator.py
ui/: package-lock.json  package.json  webpack.config.js
ui/src/: Alert.js  App.js  CsvGrid.js  ExpressionField.js  Result.js  Results.js  index.html  index.js  theme.js
